update mobile media query to fix horizontal scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,10 @@ Button {
     width: 95%;
     margin: 1.5% auto;
   }
+
+  p{
+    font-size: 1.6rem;
+  }
 }
 
 .hr {
